--- a/index.html
+++ b/index.html
@@ -4,33 +4,10 @@
 <head>
 	<meta charset="utf-8">
 	<title>WebGLSandbox</title>
-
-	<script type="text/javascript" src="js/gl-matrix-min.js"></script>
-
-	<script id="shader-fs" type="x-shader/x-fragment">
-	precision mediump float;
-	void main(void) {
-		gl_FragColor = vec4(1.0, 1.0, 1.0, 1.0);
-	}
-	</script>
-	
-	<script id="shader-vs" type="x-shader/x-vertex">
-	attribute vec3 aVertexPosition;
-	uniform mat4 uMVMatrix;
-	uniform mat4 uPMatrix;
-	void main(void) {
-		gl_Position = uPMatrix * uMVMatrix * vec4(aVertexPosition, 1.0);
-	}
-	</script>
-
 </head>
 <body onload="webGLStart();">
-	<p>What</p>
-	<div>
-		<script src="js/app.js"></script>
-	</div>
-	<div>
-		<textarea id="id_code_js" rows="10" cols="40" name="code_js"></textarea>
-	</div>
+	<p><a href="http://learningwebgl.com/blog/?page_id=1217">Learning WebGL</a></p>
+	<a href="lesson1/index.html">Lesson 1</a><br>
+	<a href="lesson2/index.html">Lesson 2</a><br>
 </body>
 </html>
