--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
 </head>
 <body onload="webGLStart();">
 	<p><a href="http://learningwebgl.com/blog/?page_id=1217">Learning WebGL</a></p>
+	
+	<a href="https://github.com/Juniperbrew/WebGLSandbox">Repo</a><br>
 	<a href="lesson1/index.html">Lesson 1</a><br>
 	<a href="lesson2/index.html">Lesson 2</a><br>
 </body>
