--- a/lesson1/index.html
+++ b/lesson1/index.html
@@ -26,7 +26,7 @@
 </head>
 <body onload="webGLStart();">
 	<p><a href=../index.html>Tutorial index</a></p>
-	<a href=http://learningwebgl.com/blog/?p=28>WebGL Lesson 1 – A triangle and a square</a>
+	<a href=http://learningwebgl.com/blog/?p=28>WebGL Lesson 1 – A triangle and a square</a><br>
 	<a href=https://github.com/Juniperbrew/WebGLSandbox/tree/gh-pages/lesson1>Repo</a>
 	<div>
 		<script src="js/app.js"></script>
